samples/_failures_safe/1761626655_c719e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_637e184d.c: In function ‘main’:
./samples/SAFE/__tmp_637e184d.c:157:23: error: expected ‘;’ at end of input
  157 |         input[len - 1]
      |                       ^
      |                       ;
./samples/SAFE/__tmp_637e184d.c:157:9: error: expected declaration or statement at end of input
  157 |         input[len - 1]
      |         ^~~~~
./samples/SAFE/__tmp_637e184d.c:157:9: error: expected declaration or statement at end of input
